# mcp

./: .dockerignore  .earthlyignore  .gitignore  .yamllint  Earthfile  Makefile  README.md
.github/workflows/: _crate.yml  ci.yml  containers.yml  release.yml
botwork-mcp-echo/: Cargo.toml  README.md
botwork-mcp-echo/src/: lib.rs
botwork-mcp-echo/tests/: streamable_http.rs
containers/: Makefile  README.md
containers/mcp-echo/: Dockerfile
containers/mcp-glint/: Dockerfile
echo/: Cargo.toml  Dockerfile  README.md  mcp-package.yaml
echo/src/: lib.rs  main.rs
echo/tests/: streamable_http.rs
glint/: Cargo.toml  README.md
glint/src/: lib.rs  main.rs
glint/tests/: streamable_http.rs
