[package]
name = "botwork-mcp-echo"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "botwork-mcp-echo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
botwork-version = { git = "https://github.com/botworkz/botwork", tag = "v0.3.16" }
axum = "0.8"
http = "1"
rmcp = { version = "1.8.0", default-features = false, features = ["server", "transport-streamable-http-server", "macros", "schemars"] }
schemars = "1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde_json = "1.0"
